# patchwork

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.sparkle-space/: working-memory.json
archive/: lexer-implementation-plan.md  parlex-calc-utf8-test.md  parser-implementation-plan.md  zed-extension-dev.md  zed-extension-plan.md
crates/patchwork-acp/: Cargo.toml
crates/patchwork-acp/src/: agent.rs  main.rs
crates/patchwork-compiler/: Cargo.toml
crates/patchwork-compiler/src/: code-process-init.js  codegen.rs  driver.rs  error.rs  lib.rs  module.rs  prompts.rs  runtime.js  typecheck.rs
crates/patchwork-compiler/tests/: codegen_tests.rs
crates/patchwork-lsp/: Cargo.toml
crates/patchwork-lsp/src/: main.rs
docs/: arch-mdbook-design.md  arch-mdbook-mvp-plan.md  code-fence-issue-analysis.md  compiler-design.md  compiler-implementation-plan.md  integration-testing.md  lexer-design.md  lexer-implementation-plan.md  lsp-future-features.md  parser-design.md  parser-implementation-plan.md  parser-whitespace-status.md  parser-workarounds.md  patchwork-acp-design.md  patchwork-acp-implementation-plan.md  phase12-status.md  phase5-completion-summary.md  phase6-completion-summary.md  phase7-completion-summary.md  tree-sitter-node-types.md  zed-extension-dev.md  zed-extension-plan.md  zed-extension-research.md
examples/: cat-test.pw  mailbox-demo.pw  phase5-message-demo.pw  session-demo.pw
scripts/: sync-queries.sh
test/: shell-commands.pw  simple.pw
tree-sitter/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  setup.py  (+1 more)
(+144 files in other folders)
