[package]
name = "patchwork-acp"
version = "0.1.0"
edition = "2021"
description = "ACP proxy for executing Patchwork code with LLM integration"

[[bin]]
name = "patchwork-acp"
path = "src/main.rs"

[dependencies]
patchwork-eval = { path = "../patchwork-eval" }

# SACP framework
sacp = "1.1"
sacp-proxy = "2.0"
agent-client-protocol-schema = "0.6"

# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
