[package]
name = "patchwork-compiler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "patchworkc"
path = "src/bin/patchworkc.rs"

[dependencies]
patchwork-parser = { path = "../patchwork-parser" }
patchwork-lexer = { path = "../patchwork-lexer" }
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
