[package]
name = "patchwork-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dherman/patchwork"
publish = false

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20"
patchwork-parser = { path = "../patchwork-parser" }
anyhow = "1"
